--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.3",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.1.1",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@types/node": "^24.1.0"
+    "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.1.0",
+    "@types/pg": "^8.15.5"
   },
   "name": "express-postgres-ts-template",
   "version": "1.0.0",
