--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - DB_PASSWORD=postgres
       - DB_NAME=postgres
       - NODE_ENV=development
+      - PORT=3000
     depends_on:
       - postgres
   postgres:
@@ -21,8 +22,8 @@ services:
     container_name: postgres-db
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
       POSTGRES_DB: postgres
     ports:
       - "5432:5432"
